# mokey-lang

go/: go.mod
go/ast/: ast.go
go/lexer/: lexer.go  lexer_test.go
go/parser/: parser.go  parser_test.go
go/repl/: repl.go
go/token/: token.go
rust/: Cargo.toml  \
rust/src/: main.rs  repl.rs
rust/src/lib/: ast.rs  eval.rs  evaluator.rs  lexer.rs  mod.rs  object.rs  parser.rs  token.rs
