[package]
name = "monkey_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "monkey_lang"
path = "src/main.rs"

[[bin]]
name = "repl"
path = "src/repl.rs"

[dependencies]
